spec: check table exists under ns (#52)
close #48
