# java/lance-catalog-apache-client/api/openapi.yaml
@@ -241,6 +241,32 @@ paths:
       - Table
       x-accepts:
       - application/json
+    head:
+      description: Check if a table exists within a given namespace.
+      operationId: TableExists
+      parameters:
+      - $ref: '#/components/parameters/namespace'
+      - $ref: '#/components/parameters/table'
+      responses:
+        "200":
+          description: "Success, no content"
+        "400":
+          $ref: '#/components/responses/BadRequestErrorResponse'
+        "401":
+          $ref: '#/components/responses/UnauthorizedResponse'
+        "403":
+          $ref: '#/components/responses/ForbiddenResponse'
+        "404":
+          $ref: '#/components/responses/NotFoundResponse'
+        "503":
+          $ref: '#/components/responses/ServiceUnavailableResponse'
+        "5XX":
+          $ref: '#/components/responses/ServerErrorResponse'
+      summary: Check if a table exists
+      tags:
+      - Table
+      x-accepts:
+      - application/json
     parameters:
     - $ref: '#/components/parameters/namespace'
     - $ref: '#/components/parameters/table'
